fix z-index modal del producto

--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,7 @@ header{
   display: none;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 99999;
 }
 #btn-modal:checked ~ .container-modal {
   display: flex;
